--- a/ProductosStensa.html
+++ b/ProductosStensa.html
@@ -14,82 +14,106 @@
 
     <main>
         <div class="productos">
+
             <section class="producto">
-                <h2><a href="L298N.html">L298N</a></h2>
-                <img src="proyecto.Tics/L298N.png" alt="L298N">
+                <a href="L298N.html" class="link-producto">
+                    <h2>L298N</h2>
+                    <img src="proyecto.Tics/L298N.png" alt="L298N">
+                </a>
                 <p>Driver para motores DC y paso a paso, ideal para controlar motores N20 con Arduino.</p>
                 <p class="precio">Precio: Q60 GTQ</p>
             </section>
 
             <section class="producto">
-                <h2><a href="ArduinoUno.html">Arduino UNO</a></h2>
-                <img src="proyecto.Tics/arduinouno.png" alt="Arduino UNO">
+                <a href="ArduinoUno.html" class="link-producto">
+                    <h2>Arduino UNO</h2>
+                    <img src="proyecto.Tics/arduinouno.png" alt="Arduino UNO">
+                </a>
                 <p>Placa de desarrollo microcontrolador basada en ATmega328P, perfecta para proyectos electrónicos.</p>
                 <p class="precio">Precio: Q150 GTQ</p>
             </section>
 
             <section class="producto">
-                <h2><a href="MotoresN20.html">Motores N20 - Motores DC Miniatura</a></h2>
-                <img src="proyecto.Tics/motoresn20.png" alt="Motores N20">
+                <a href="MotoresN20.html" class="link-producto">
+                    <h2>Motores N20 - Motores DC Miniatura</h2>
+                    <img src="proyecto.Tics/motoresn20.png" alt="Motores N20">
+                </a>
                 <p>Motores eléctricos compactos y eficientes, usados en robots y pequeños dispositivos.</p>
                 <p class="precio">Precio: Q80 GTQ</p>
             </section>
 
             <section class="producto">
-                <h2><a href="Jumpers.html">Jumpers - Cables de Conexión para Proyectos Electrónicos</a></h2>
-                <img src="proyecto.Tics/jumpers.png" alt="Jumpers Macho Macho, Hembra Macho">
+                <a href="Jumpers.html" class="link-producto">
+                    <h2>Jumpers - Cables de Conexión para Proyectos Electrónicos</h2>
+                    <img src="proyecto.Tics/jumpers.png" alt="Jumpers Macho Macho, Hembra Macho">
+                </a>
                 <p>Cables de conexión para protoboards y placas, esenciales para prototipos electrónicos.</p>
                 <p class="precio">Precio: Q70 GTQ</p>
             </section>
 
             <section class="producto">
-                <h2><a href="SensorUltrasonico.html">Sensor Ultrasónico</a></h2>
-                <img src="proyecto.Tics/sensor.png" alt="Sensor Ultrasónico">
+                <a href="SensorUltrasonico.html" class="link-producto">
+                    <h2>Sensor Ultrasónico</h2>
+                    <img src="proyecto.Tics/sensor.png" alt="Sensor Ultrasónico">
+                </a>
                 <p>Sensor para medir distancia mediante ondas ultrasónicas, común en robótica y automatización.</p>
                 <p class="precio">Precio: Q120 GTQ</p>
             </section>
 
             <section class="producto">
-                <h2><a href="Llantas.html">Llantas de carrito de juguete</a></h2>
-                <img src="proyecto.Tics/llantas.png" alt="Llantas de carrito de juguete">
+                <a href="Llantas.html" class="link-producto">
+                    <h2>Llantas de carrito de juguete</h2>
+                    <img src="proyecto.Tics/llantas.png" alt="Llantas de carrito de juguete">
+                </a>
                 <p>Juego de llantas pequeñas ideales para robots y vehículos a escala.</p>
                 <p class="precio">Precio: Q90 GTQ</p>
             </section>
 
             <section class="producto">
-                <h2><a href="Motorreductores.html">Motorreductores amarillos</a></h2>
-                <img src="proyecto.Tics/motores.png" alt="Motorreductores amarillos">
+                <a href="Motorreductores.html" class="link-producto">
+                    <h2>Motorreductores amarillos</h2>
+                    <img src="proyecto.Tics/motores.png" alt="Motorreductores amarillos">
+                </a>
                 <p>Motorreductores compactos con carcasa amarilla, usados para control preciso de velocidad y torque.</p>
                 <p class="precio">Precio: Q20 GTQ</p>
             </section>
 
             <section class="producto">
-                <h2><a href="ArduinoNano.html">Arduino Nano</a></h2>
-                <img src="proyecto.Tics/arduinonano.png" alt="Arduino Nano">
+                <a href="ArduinoNano.html" class="link-producto">
+                    <h2>Arduino Nano</h2>
+                    <img src="proyecto.Tics/arduinonano.png" alt="Arduino Nano">
+                </a>
                 <p>Placa microcontroladora pequeña y versátil, ideal para proyectos con espacio limitado.</p>
                 <p class="precio">Precio: Q125 GTQ</p>
             </section>
 
             <section class="producto">
-                <h2><a href="ESP32.html">ESP-32</a></h2>
-                <img src="proyecto.Tics/esp.png" alt="ESP-32">
+                <a href="ESP32.html" class="link-producto">
+                    <h2>ESP-32</h2>
+                    <img src="proyecto.Tics/esp.png" alt="ESP-32">
+                </a>
                 <p>Módulo potente con WiFi y Bluetooth integrado, perfecto para proyectos IoT y conectividad inalámbrica.</p>
                 <p class="precio">Precio: Q450 GTQ</p>
             </section>
 
             <section class="producto">
-                <h2><a href="L293D.html">L293D</a></h2>
-                <img src="proyecto.Tics/l293d.png" alt="L293D">
+                <a href="L293D.html" class="link-producto">
+                    <h2>L293D</h2>
+                    <img src="proyecto.Tics/l293d.png" alt="L293D">
+                </a>
                 <p>Driver de puente H para controlar motores DC y paso a paso con facilidad y eficiencia.</p>
                 <p class="precio">Precio: Q20 GTQ</p>
             </section>
 
             <section class="producto">
-                <h2><a href="SensorLuz.html">Sensor de luz</a></h2>
-                <img src="proyecto.Tics/sensorluz.png" alt="Sensor de luz">
+                <a href="SensorLuz.html" class="link-producto">
+                    <h2>Sensor de luz</h2>
+                    <img src="proyecto.Tics/sensorluz.png" alt="Sensor de luz">
+                </a>
                 <p>Sensor que detecta niveles de luz ambiental, útil para automatización y proyectos de iluminación.</p>
                 <p class="precio">Precio: Q35 GTQ</p>
             </section>
+
         </div>
     </main>
 
