--- a/ProductosStensa.html
+++ b/ProductosStensa.html
@@ -16,8 +16,8 @@
         <div class="productos">
 
             <section class="producto">
-                <a href="L298N.html" class="link-producto">
-                    <h2>L298N</h2>
+                <h2>L298N</h2>
+                <a href="L298N.html">
                     <img src="proyecto.Tics/L298N.png" alt="L298N">
                 </a>
                 <p>Driver para motores DC y paso a paso, ideal para controlar motores N20 con Arduino.</p>
@@ -25,8 +25,8 @@
             </section>
 
             <section class="producto">
-                <a href="ArduinoUno.html" class="link-producto">
-                    <h2>Arduino UNO</h2>
+                <h2>Arduino UNO</h2>
+                <a href="ArduinoUno.html">
                     <img src="proyecto.Tics/arduinouno.png" alt="Arduino UNO">
                 </a>
                 <p>Placa de desarrollo microcontrolador basada en ATmega328P, perfecta para proyectos electrónicos.</p>
@@ -34,8 +34,8 @@
             </section>
 
             <section class="producto">
-                <a href="MotoresN20.html" class="link-producto">
-                    <h2>Motores N20 - Motores DC Miniatura</h2>
+                <h2>Motores N20 - Motores DC Miniatura</h2>
+                <a href="MotoresN20.html">
                     <img src="proyecto.Tics/motoresn20.png" alt="Motores N20">
                 </a>
                 <p>Motores eléctricos compactos y eficientes, usados en robots y pequeños dispositivos.</p>
@@ -43,8 +43,8 @@
             </section>
 
             <section class="producto">
-                <a href="Jumpers.html" class="link-producto">
-                    <h2>Jumpers - Cables de Conexión para Proyectos Electrónicos</h2>
+                <h2>Jumpers - Cables de Conexión para Proyectos Electrónicos</h2>
+                <a href="Jumpers.html">
                     <img src="proyecto.Tics/jumpers.png" alt="Jumpers Macho Macho, Hembra Macho">
                 </a>
                 <p>Cables de conexión para protoboards y placas, esenciales para prototipos electrónicos.</p>
@@ -52,8 +52,8 @@
             </section>
 
             <section class="producto">
-                <a href="SensorUltrasonico.html" class="link-producto">
-                    <h2>Sensor Ultrasónico</h2>
+                <h2>Sensor Ultrasónico</h2>
+                <a href="SensorUltrasonico.html">
                     <img src="proyecto.Tics/sensor.png" alt="Sensor Ultrasónico">
                 </a>
                 <p>Sensor para medir distancia mediante ondas ultrasónicas, común en robótica y automatización.</p>
@@ -61,8 +61,8 @@
             </section>
 
             <section class="producto">
-                <a href="Llantas.html" class="link-producto">
-                    <h2>Llantas de carrito de juguete</h2>
+                <h2>Llantas de carrito de juguete</h2>
+                <a href="Llantas.html">
                     <img src="proyecto.Tics/llantas.png" alt="Llantas de carrito de juguete">
                 </a>
                 <p>Juego de llantas pequeñas ideales para robots y vehículos a escala.</p>
@@ -70,8 +70,8 @@
             </section>
 
             <section class="producto">
-                <a href="Motorreductores.html" class="link-producto">
-                    <h2>Motorreductores amarillos</h2>
+                <h2>Motorreductores amarillos</h2>
+                <a href="Motorreductores.html">
                     <img src="proyecto.Tics/motores.png" alt="Motorreductores amarillos">
                 </a>
                 <p>Motorreductores compactos con carcasa amarilla, usados para control preciso de velocidad y torque.</p>
@@ -79,8 +79,8 @@
             </section>
 
             <section class="producto">
-                <a href="ArduinoNano.html" class="link-producto">
-                    <h2>Arduino Nano</h2>
+                <h2>Arduino Nano</h2>
+                <a href="ArduinoNano.html">
                     <img src="proyecto.Tics/arduinonano.png" alt="Arduino Nano">
                 </a>
                 <p>Placa microcontroladora pequeña y versátil, ideal para proyectos con espacio limitado.</p>
@@ -88,8 +88,8 @@
             </section>
 
             <section class="producto">
-                <a href="ESP32.html" class="link-producto">
-                    <h2>ESP-32</h2>
+                <h2>ESP-32</h2>
+                <a href="ESP32.html">
                     <img src="proyecto.Tics/esp.png" alt="ESP-32">
                 </a>
                 <p>Módulo potente con WiFi y Bluetooth integrado, perfecto para proyectos IoT y conectividad inalámbrica.</p>
@@ -97,8 +97,8 @@
             </section>
 
             <section class="producto">
-                <a href="L293D.html" class="link-producto">
-                    <h2>L293D</h2>
+                <h2>L293D</h2>
+                <a href="L293D.html">
                     <img src="proyecto.Tics/l293d.png" alt="L293D">
                 </a>
                 <p>Driver de puente H para controlar motores DC y paso a paso con facilidad y eficiencia.</p>
@@ -106,8 +106,8 @@
             </section>
 
             <section class="producto">
-                <a href="SensorLuz.html" class="link-producto">
-                    <h2>Sensor de luz</h2>
+                <h2>Sensor de luz</h2>
+                <a href="SensorLuz.html">
                     <img src="proyecto.Tics/sensorluz.png" alt="Sensor de luz">
                 </a>
                 <p>Sensor que detecta niveles de luz ambiental, útil para automatización y proyectos de iluminación.</p>
