--- a/ProductosStensa.html
+++ b/ProductosStensa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Productos STENSA</title>
-    <link rel="stylesheet" href="css/Productos.CSS">
+    <link rel="stylesheet" href="css/Productos.css">
 </head>
 <body>
     <header>
