--- a/ProductosStensa.html
+++ b/ProductosStensa.html
@@ -117,6 +117,15 @@
         </div>
     </main>
 
+    <!-- Contenedor carrito flotante -->
+    <div id="carrito-flotante">
+      <h3>Carrito de Compras</h3>
+      <div id="lista-carrito">
+        <p>El carrito está vacío.</p>
+      </div>
+      <button class="eliminar-item" onclick="vaciarCarrito()">Vaciar Carrito</button>
+    </div>
+
     <script src="carrito.js"></script>
 </body>
 </html>
