--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8" />
     <title>Inicio</title>
+
+    <!-- Estilo principal de esta página -->
     <link rel="stylesheet" href="css/inicio.css" />
+
+    <!-- Estilo del carrito (compartido entre páginas) -->
+    <link rel="stylesheet" href="css/carrito.css" />
 </head>
 <body>
     <nav>
         <ul>
-            <!-- Opciones Inicio y Productos eliminadas para esta página -->
-            <!-- Puedes agregar otras opciones aquí si quieres -->
+            <!-- Menú (puedes agregar más si quieres) -->
         </ul>
     </nav>
 
@@ -26,19 +30,17 @@
             </p>
         </section>
 
-        <!-- Botones "Ver Productos" y "Ver Promociones" -->
+        <!-- Botones de navegación -->
         <div class="botones-navegacion" style="margin-bottom: 20px;">
             <a href="ProductosStensa.html" class="boton">Ver Productos</a>
             <a href="PromocionesStensa.html" class="boton">Ver Promociones</a>
         </div>
 
-        <!-- Imagen agregada al final del main -->
+        <!-- Imagen decorativa al final -->
         <img src="proyecto.Tics/partedeabajo.png" alt="Parte de abajo" class="imagen-inferior">
     </main>
 
-
-    "></div>
-
+    <!-- Script del carrito -->
     <script src="js/carrito.js"></script>
 </body>
 </html>
