--- a/ProductosStensa.html
+++ b/ProductosStensa.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Productos STENSA</title>
     <link rel="stylesheet" href="css/Productos.css">
+ <link rel="stylesheet" href="css/carrito.css">
+
 </head>
 <body>
     <header>
