--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/inicio.css" />
 
     <!-- Estilo del carrito (compartido entre páginas) -->
-    <link rel="stylesheet" href="carrito.css" />
+    <link rel="stylesheet" href="css/carrito.css" />
 </head>
 <body>
     <nav>
