--- a/SensorUltrasonico.html
+++ b/SensorUltrasonico.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - Sensor Ultrasónico</title>
-    <link rel="stylesheet" href="info.css">
+    <link rel="stylesheet" href="css/info.css">
+    <link rel="stylesheet" href="css/carrito.css">
 </head>
 <body>
     <header>
