--- a/PromocionesStensa.html
+++ b/PromocionesStensa.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Promociones - STENSA</title>
-    <link rel="stylesheet" href="promo.CSS">
+    <link rel="stylesheet" href="css/promo.CSS">
+        <link rel="stylesheet" href="css/carrito.css">
+
 </head>
 <body>
     <nav>
