--- a/PromocionesStensa.html
+++ b/PromocionesStensa.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Promociones - STENSA</title>
-    <link rel="stylesheet" href="css/promo.CSS">
-        <link rel="stylesheet" href="css/carrito.css">
-
+    <link rel="stylesheet" href="css/promo.CSS" />
+    <link rel="stylesheet" href="css/carrito.css" />
 </head>
 <body>
     <nav>
@@ -23,27 +22,28 @@
 
         <div class="promociones-lista">
             <article class="promocion">
-                <h3><a href = "KitBasico.html">Kit Básico Minisumo<a></h3>
+                <h3><a href="KitBasico.html">Kit Básico Minisumo</a></h3>
                 <p>Incluye Arduino UNO, motores N20, driver L298N y accesorios esenciales.</p>
                 <p class="precio">Precio especial: Q385 GTQ</p>
-                <button>Comprar Kit</button>
+                <a href="KitBasico.html" class="boton-comprar">Comprar Kit</a>
             </article>
 
             <article class="promocion">
-                <h3><a href = "KitAvanzado.html">Kit Avanzado Minisumo<a></h3>
+                <h3><a href="KitAvanzado.html">Kit Avanzado Minisumo</a></h3>
                 <p>Todo el Kit Básico más sensor ultrasónico y llantas de carrito de juguete.</p>
                 <p class="precio">Precio especial: Q800 GTQ</p>
-                <button>Comprar Kit</button>
+                <a href="KitAvanzado.html" class="boton-comprar">Comprar Kit</a>
             </article>
 
             <article class="promocion">
-                <h3><a href = "KitProfesional.html">Kit Profesional Minisumo<a></h3>
+                <h3><a href="KitProfesional.html">Kit Profesional Minisumo</a></h3>
                 <p>Incluye Kit Avanzado, motorreductores amarillos y sensores adicionales.</p>
                 <p class="precio">Precio especial: Q1,200 GTQ</p>
-                <button>Comprar Kit</button>
+                <a href="KitProfesional.html" class="boton-comprar">Comprar Kit</a>
             </article>
         </div>
     </main>
+
     <script src="carrito.js"></script>
 
 </body>
