--- a/PromocionesStensa.html
+++ b/PromocionesStensa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Promociones - STENSA</title>
-    <link rel="stylesheet" href="css/promo.css">
+    <link rel="stylesheet" href="css/promo.CSS">
     <link rel="stylesheet" href="css/carrito.css">
 </head>
 <body>
