--- a/PromocionesStensa.html
+++ b/PromocionesStensa.html
@@ -25,21 +25,21 @@
                 <h3>Kit Básico Minisumo</h3>
                 <p>Incluye Arduino UNO, motores N20, driver L298N y accesorios esenciales.</p>
                 <p class="precio">Precio especial: Q385 GTQ</p>
-                <a href="KitBasico.html" class="boton-comprar">Comprar Kit</a>
+                <button onclick="location.href='KitBasico.html'">Comprar Kit</button>
             </article>
 
             <article class="promocion">
                 <h3>Kit Avanzado Minisumo</h3>
                 <p>Todo el Kit Básico más sensor ultrasónico y llantas de carrito de juguete.</p>
                 <p class="precio">Precio especial: Q800 GTQ</p>
-                <a href="KitAvanzado.html" class="boton-comprar">Comprar Kit</a>
+                <button onclick="location.href='KitAvanzado.html'">Comprar Kit</button>
             </article>
 
             <article class="promocion">
                 <h3>Kit Profesional Minisumo</h3>
                 <p>Incluye Kit Avanzado, motorreductores amarillos y sensores adicionales.</p>
                 <p class="precio">Precio especial: Q1,200 GTQ</p>
-                <a href="KitProfesional.html" class="boton-comprar">Comprar Kit</a>
+                <button onclick="location.href='KitProfesional.html'">Comprar Kit</button>
             </article>
         </div>
     </main>
