--- a/ESP32.html
+++ b/ESP32.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - ESP-32</title>
-    <link rel="stylesheet" href="Stensa.CSS">
+   <link rel="stylesheet" href="css/info.css">
+    <link rel="stylesheet" href="css/carrito.css">
 </head>
 <body>
     <header>
