--- a/Jumpers.html
+++ b/Jumpers.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalle del Producto - Jumpers</title>
-    <link rel="stylesheet" href="Stensa.CSS">
-</head>
+<link rel="stylesheet" href="css/info.css">
+    <link rel="stylesheet" href="css/carrito.css"></head>
 <body>
     <header>
         <h1>Jumpers - Cables de Conexión para Proyectos Electrónicos</h1>
