--- a/KitAvanzado.html
+++ b/KitAvanzado.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Kit Avanzado - STENSA</title>
-    <link rel="stylesheet" href="Stensa.CSS">
-</head>
+<link rel="stylesheet" href="css/info.css">
+    <link rel="stylesheet" href="css/carrito.css"></head>
 <body>
     <header>
         <h1>Kit Avanzado Minisumo - Promoción Especial</h1>
