--- a/KitProfesional.html
+++ b/KitProfesional.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Kit Profesional - STENSA</title>
-    <link rel="stylesheet" href="Stensa.CSS">
-</head>
+<link rel="stylesheet" href="css/info.css">
+    <link rel="stylesheet" href="css/carrito.css"></head>
 <body>
     <header>
         <h1>Kit Profesional Minisumo - Promoción Especial</h1>
