--- a/MotoresN20.html
+++ b/MotoresN20.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - Motores N20</title>
-    <link rel="stylesheet" href="Stensa.CSS">
-</head>
+<link rel="stylesheet" href="css/info.css">
+    <link rel="stylesheet" href="css/carrito.css"></head>
 <body>
     <header>
         <h1>Motores N20 - Motores DC Miniatura</h1>
