--- a/ProductosStensa.html
+++ b/ProductosStensa.html
@@ -121,5 +121,7 @@
     <!-- Aquí ya no está el carrito estático -->
 
     <script src="carrito.js"></script>
+    <!-- Ícono flotante del carrito -->
+<div id="icono-carrito" title="Ver carrito">🛒</div>
 </body>
 </html>
