--- a/ProductosStensa.html
+++ b/ProductosStensa.html
@@ -1,123 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Productos STENSA</title>
-    <link rel="stylesheet" href="css/Productos.css">
-    <link rel="stylesheet" href="css/carrito.css">
+  <meta charset="UTF-8" />
+  <title>Productos STENSA</title>
+  <link rel="stylesheet" href="css/productos.css" />
+  <link rel="stylesheet" href="css/carrito.css" />
 </head>
 <body>
-    <header>
-        <h1 style="text-align:center;">Productos STENSA</h1>
-    </header>
+  <header>
+    <div id="barra-navegacion">
+      <h1>Productos STENSA</h1>
+      <!-- Barra de búsqueda -->
+      <form id="barra-busqueda" onsubmit="buscarProductos(); return false;">
+        <input type="text" id="input-busqueda" placeholder="Buscar productos..." />
+        <button type="submit">🔍</button>
+      </form>
+    </div>
+  </header>
 
-    <button onclick="location.href='index.html'">← Volver al Inicio</button>
+  <main>
+    <section id="productos">
+      <div class="producto">
+        <h3>Arduino Uno</h3>
+        <p>Placa de desarrollo</p>
+        <button class="comprar-btn">Comprar Arduino Uno</button>
+      </div>
+      <div class="producto">
+        <h3>Sensor Ultrasónico</h3>
+        <p>Sensor de distancia</p>
+        <button class="comprar-btn">Comprar Sensor Ultrasónico</button>
+      </div>
+      <!-- Agrega más productos similares -->
+    </section>
+  </main>
 
-    <main>
-        <div class="productos">
-
-            <section class="producto">
-                <h2>L298N</h2>
-                <a href="L298N.html">
-                    <img src="proyecto.Tics/L298N.png" alt="L298N">
-                </a>
-                <p>Driver para motores DC y paso a paso, ideal para controlar motores N20 con Arduino.</p>
-                <p class="precio">Precio: Q60 GTQ</p>
-            </section>
-
-            <section class="producto">
-                <h2>Arduino UNO</h2>
-                <a href="ArduinoUno.html">
-                    <img src="proyecto.Tics/arduinouno.png" alt="Arduino UNO">
-                </a>
-                <p>Placa de desarrollo microcontrolador basada en ATmega328P, perfecta para proyectos electrónicos.</p>
-                <p class="precio">Precio: Q150 GTQ</p>
-            </section>
-
-            <section class="producto">
-                <h2>Motores N20 - Motores DC Miniatura</h2>
-                <a href="MotoresN20.html">
-                    <img src="proyecto.Tics/motoresn20.png" alt="Motores N20">
-                </a>
-                <p>Motores eléctricos compactos y eficientes, usados en robots y pequeños dispositivos.</p>
-                <p class="precio">Precio: Q80 GTQ</p>
-            </section>
-
-            <section class="producto">
-                <h2>Jumpers - Cables de Conexión para Proyectos Electrónicos</h2>
-                <a href="Jumpers.html">
-                    <img src="proyecto.Tics/jumpers.png" alt="Jumpers Macho Macho, Hembra Macho">
-                </a>
-                <p>Cables de conexión para protoboards y placas, esenciales para prototipos electrónicos.</p>
-                <p class="precio">Precio: Q70 GTQ</p>
-            </section>
-
-            <section class="producto">
-                <h2>Sensor Ultrasónico</h2>
-                <a href="SensorUltrasonico.html">
-                    <img src="proyecto.Tics/sensor.png" alt="Sensor Ultrasónico">
-                </a>
-                <p>Sensor para medir distancia mediante ondas ultrasónicas, común en robótica y automatización.</p>
-                <p class="precio">Precio: Q120 GTQ</p>
-            </section>
-
-            <section class="producto">
-                <h2>Llantas de carrito de juguete</h2>
-                <a href="Llantas.html">
-                    <img src="proyecto.Tics/llantas.png" alt="Llantas de carrito de juguete">
-                </a>
-                <p>Juego de llantas pequeñas ideales para robots y vehículos a escala.</p>
-                <p class="precio">Precio: Q90 GTQ</p>
-            </section>
-
-            <section class="producto">
-                <h2>Motorreductores amarillos</h2>
-                <a href="Motorreductores.html">
-                    <img src="proyecto.Tics/motores.png" alt="Motorreductores amarillos">
-                </a>
-                <p>Motorreductores compactos con carcasa amarilla, usados para control preciso de velocidad y torque.</p>
-                <p class="precio">Precio: Q20 GTQ</p>
-            </section>
-
-            <section class="producto">
-                <h2>Arduino Nano</h2>
-                <a href="ArduinoNano.html">
-                    <img src="proyecto.Tics/arduinonano.png" alt="Arduino Nano">
-                </a>
-                <p>Placa microcontroladora pequeña y versátil, ideal para proyectos con espacio limitado.</p>
-                <p class="precio">Precio: Q125 GTQ</p>
-            </section>
-
-            <section class="producto">
-                <h2>ESP-32</h2>
-                <a href="ESP32.html">
-                    <img src="proyecto.Tics/esp.png" alt="ESP-32">
-                </a>
-                <p>Módulo potente con WiFi y Bluetooth integrado, perfecto para proyectos IoT y conectividad inalámbrica.</p>
-                <p class="precio">Precio: Q450 GTQ</p>
-            </section>
-
-            <section class="producto">
-                <h2>L293D</h2>
-                <a href="L293D.html">
-                    <img src="proyecto.Tics/l293d.png" alt="L293D">
-                </a>
-                <p>Driver de puente H para controlar motores DC y paso a paso con facilidad y eficiencia.</p>
-                <p class="precio">Precio: Q20 GTQ</p>
-            </section>
-
-            <section class="producto">
-                <h2>Sensor de luz</h2>
-                <a href="SensorLuz.html">
-                    <img src="proyecto.Tics/sensorluz.png" alt="Sensor de luz">
-                </a>
-                <p>Sensor que detecta niveles de luz ambiental, útil para automatización y proyectos de iluminación.</p>
-                <p class="precio">Precio: Q35 GTQ</p>
-            </section>
-
-        </div>
-    </main>
-
-    <script src="carrito.js"></script>
+  <script src="js/carrito.js"></script>
 </body>
 </html>
